<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backSignup"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/sign_up"
                android:src="@drawable/baseline_arrow_back_ios_24" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:fontFamily=""
            android:padding="5dp"
            android:text="@string/sign_up_title1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily=""
            android:padding="5dp"
            android:text="@string/sign_up_title2"
            android:textAlignment="viewStart"
            android:textColor="@color/sign_in_text"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/sign_up" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/text_shape"
            android:ems="10"
            android:hint="@string/sign_up_edit1"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/text_shape"
            android:ems="10"
            android:hint="@string/sign_up_edit2"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/text_shape"
            android:ems="10"
            android:hint="@string/sign_up_edit3"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/text_shape"
            android:ems="10"
            android:hint="@string/sign_up_edit4"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signinbtn"
            android:layout_width="359dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0700FF"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:text="@string/sign_in_signup"
                android:textColor="@color/sign_in_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signinlink"
                android:layout_width="97dp"
                android:layout_height="38dp"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:text="@string/sign_in"
                android:textAlignment="viewStart"
                android:textColor="@color/sign_up_link"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>