<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".on_board_screen_getStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/get_start" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/on_board_screen3_title"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:textAlignment="center"
            android:text="@string/get_start2"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <Button
            android:id="@+id/get_start"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/next"
            android:text="@string/get_start"
            android:textSize="25dp"
            app:icon="@drawable/baseline_arrow_forward_24"
            app:iconGravity="end"
            app:iconSize="25dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>