<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".On_board_screen1">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/on_board_screen_shape2"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            tools:layout_editor_absoluteY="640dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/on_board_screen_shape1"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            tools:layout_editor_absoluteY="640dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/on_board_screen_shape1"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="640dp" />
    </LinearLayout>

    <Button
        android:id="@+id/skip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/on_board_screen_skip"
        android:textColor="@color/sign_up_link"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="354dp"
        android:layout_height="434dp"
        android:src="@drawable/on_board_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/on_board_screen1_dis"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="484dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/on_board_screen1_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next1"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/next"
        android:text="@string/on_board_screen_next"
        android:textSize="20dp"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:iconGravity="end"
        app:iconSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>